[tool.poetry]
name = "nlp_tutorials"
version = "0.1.0"
description = "Tutorials for implementing nlp downstream tasks with HuggingFace"
authors = ["seopbo <bsk0130@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
